--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
-HHII I AM
+<input type="text" name="iinnp"></input>
+<input type="submit" name="sub"></input>
+<p></p>
 </body>
 </html>
