--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <body>
+<form action="sha256.php" method="post">
 <input type="text" name="iinnp"></input>
 <input type="submit" name="sub"></input>
+<form>
 <p></p>
 </body>
 </html>
