--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <form action="sha256.php" method="post">
-<input type="text" name="iinnp"></input>
+<input type="text" name="innp"></input>
 <input type="submit" name="sub"></input>
 <form>
 <p></p>
