--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <form action="sha256.php" method="post">
 <input type="text" name="innp"></input>
 <input type="submit" name="sub"></input>
-<form>
-<p></p>
+</form>
+<p>Hi:</p>
 </body>
 </html>
